tests/neg/param-hello.stk
param newLine: String

fun foo() =
  print
    "Hello, world!" + newLine

fun bar() = foo

fun main = bar    // error
